#6826 - fix spacing issues

--- a/public/less/ssb-site-builder/ssb-sections.less
+++ b/public/less/ssb-site-builder/ssb-sections.less
@@ -186,9 +186,9 @@
     // overflow: auto;
     z-index: 5;
 
-    // .container.inner-page {
-    //     padding: 10px!important;
-    // }
+    .container.inner-page {
+        padding: 10px!important;
+    }
 
 }
 
@@ -200,7 +200,6 @@
 }
 
 .main-include {
-    float: left;
     overflow: hidden;
 }
 
